--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -25,7 +25,7 @@ displayName = "Kontrolo" #mandatory
 # A URL to query for updates for this mod. See the JSON update specification https://mcforge.readthedocs.io/en/latest/gettingstarted/autoupdate/
 updateJSONURL = "https://raw.githubusercontent.com/Lucxjo/Kontrolo-Forge/main/versions.json" #optional
 # A URL for the "homepage" for this mod, displayed in the mod UI
-displayURL = "https://modrinth.com/mod/kontrolo-forge" #optional
+displayURL = "https://github.com/Lucxjo/Kontrolo-Forge" #optional
 # A file name (in the root of the mod JAR) containing a logo for display
 logoFile = "kontrolo.png" #optional
 # A text field displayed in the mod UI
