--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -23,7 +23,7 @@ version = "${file.jarVersion}" #mandatory
 # A display name for the mod
 displayName = "Kontrolo" #mandatory
 # A URL to query for updates for this mod. See the JSON update specification https://mcforge.readthedocs.io/en/latest/gettingstarted/autoupdate/
-updateJSONURL = "https://raw.githubusercontent.com/Lucxjo/Kontrolo-Forge/main/versions.json" #optional
+updateJSONURL = "https://git.saluton.cc/Lucxjo/Kontrolo-Forge/raw/branch/main/versions.json" #optional
 # A URL for the "homepage" for this mod, displayed in the mod UI
 displayURL = "https://github.com/Lucxjo/Kontrolo-Forge" #optional
 # A file name (in the root of the mod JAR) containing a logo for display
