--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -11,7 +11,7 @@ loaderVersion = "[1.9,)" #mandatory This is typically bumped every Minecraft ver
 # Review your options at https://choosealicense.com/. All rights reserved is the default copyright stance, and is thus the default here.
 license = "MIT"
 # A URL to refer people to when problems occur with this mod
-issueTrackerURL = "https://github.com/Lucxjo/Kontrolo-Forge/issues" #optional
+issueTrackerURL = "https://git.saluton.cc/Lucxjo/Kontrolo-Forge/issues" #optional
 # A list of mods - how many allowed here is determined by the individual mod loader
 [[mods]] #mandatory
 # The modid of the mod
@@ -25,7 +25,7 @@ displayName = "Kontrolo" #mandatory
 # A URL to query for updates for this mod. See the JSON update specification https://mcforge.readthedocs.io/en/latest/gettingstarted/autoupdate/
 updateJSONURL = "https://git.saluton.cc/Lucxjo/Kontrolo-Forge/raw/branch/main/versions.json" #optional
 # A URL for the "homepage" for this mod, displayed in the mod UI
-displayURL = "https://github.com/Lucxjo/Kontrolo-Forge" #optional
+displayURL = "https://git.saluton.cc/Lucxjo/Kontrolo-Forge" #optional
 # A file name (in the root of the mod JAR) containing a logo for display
 logoFile = "kontrolo.png" #optional
 # A text field displayed in the mod UI
