--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,13 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+# Forge Properties
+mc_version=1.16.5
+forge_version=36.1.0
+# Mod Properties
+mod_version=1.3.0
+maven_group=xyz.ludoviko.ktrl
+archives_base_name=kontrolo
+# Kotlin
+kotlin_version=1.4.32
+forge_kotlin_version=1.11.1
