--- a/gradle.properties
+++ b/gradle.properties
@@ -3,12 +3,13 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 # Forge Properties
-mc_version=1.16.5
-forge_version=36.1.0
+mc_version=1.17.1
+forge_version=37.1.0
+forge_gradle=5.1.+
 # Mod Properties
 mod_version=1.4.0
 maven_group=xyz.ludoviko.ktrl
 archives_base_name=kontrolo
 # Kotlin
-kotlin_version=1.4.32
-forge_kotlin_version=1.11.1
+kotlin_version=1.5.30
+forge_kotlin_version=2.2.0
